--- a/src/App.css
+++ b/src/App.css
@@ -128,11 +128,24 @@ main{
 #register{
   width: 100%;
   height: 100vh;
-  background-color: #54CEE3;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%238b96cc' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23eeeeee' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23737ba5' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23eee6d3' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%235d6280' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23eddeb9' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23474a5d' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23ebd79e' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%2331323b' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23e7cf83' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%231d1d1d' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23e3c868' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
-  background-attachment: fixed;
   background-size: cover;
   display: flex;
+  justify-content: right;
+}
+
+#registerIMG{
+  width: 60vw;
+  height: 100vh;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin-left: 50px;
+}
+
+#registerIMG img{
+  width: 40vw;
+  height: auto;
+  max-width: 80vh;
 }
 
 #registerForm{
@@ -140,11 +153,7 @@ main{
   height: 100vh;
   background: #eeeeee;
   color: #1d1d1d;
-  background-image:url(img/icon.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 105%;
-  background-blend-mode:soft-light;
+  margin-right: 5vw;
   display: flex;
   justify-content: center;
   align-items: center;
