--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,17 @@ header.scrolled #nav a{
   color: #fff;
 }
 
+header #nav.active a{
+  color: #ff0000;
+}
+
 #logo{
   margin-left: 10px;
+}
+
+#logo img{
+  width: 50px;
+  height: auto;
 }
 
 #nav ul{
