--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,14 @@ main{
   box-shadow: #1d1d1d 0px 5px 10px 0px;
 }
 
+#registerForm form a{
+  text-align: center;
+  margin-top: 20px;
+  color: #1d1d1d;
+  text-decoration: none;
+
+}
+
 #registerSubmit{
   box-shadow:  10px 10px 20px #cacaca
 }
@@ -214,11 +222,11 @@ main{
 
 #FAQ{
   width: 100%;
-  margin-top: 100px;
   display: flex;
   align-items: center;
   background-color: #eeeeee;
   flex-direction: column;
+  margin-top: 100px;
 }
 
 #FAQ h1{
@@ -248,6 +256,29 @@ main{
 }
 
 .content {
-  display: none;
   margin-top: 20px;
+  transition: 0.5s ease-out;
+}
+
+#tutorials{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#noPage{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#noPageImg{
+  height: auto;
+  width: 30vh;
+  max-width: 80vh;
 }
