--- a/src/App.css
+++ b/src/App.css
@@ -282,3 +282,20 @@ main{
   width: 30vh;
   max-width: 80vh;
 }
+
+#test{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#faqSearch{
+  height: 50px;
+  width: 35vw;
+  border-radius: 30px;
+  padding: 5px;
+  margin-top: 30px;
+  background-color: #fefefe;
+}
